1.0.5 - Microsoft Edge Fixes
- Bug: Hero brightness filter - position fixed causes filter not to work.  Edge bug.

- Fix: Hero min-height for widescreens provides enough space for content

- Fix: Massive whitespace at bottom of page due to overflow: auto; on svg icons

--- a/resources/assets/styles/components/_icons.scss
+++ b/resources/assets/styles/components/_icons.scss
@@ -8,7 +8,6 @@
   fill: none;
   stroke: $black;
   stroke-width: 1;
-  overflow: auto;
   padding: 1px;
 }
 
