--- a/resources/assets/styles/layouts/_cover.scss
+++ b/resources/assets/styles/layouts/_cover.scss
@@ -138,6 +138,11 @@
         }
       }
     }
+
+    .hero,
+    .hero img {
+      min-height: 550px;
+    }
   }
 }
 
